[package]
name = "webAuthn"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
hex = "0.4.3"
mongodb = "3.2.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
ethers = "2.0.14"
tokio = "1.44.1"

